--- a/app/index.html
+++ b/app/index.html
@@ -123,8 +123,8 @@
 
 
 	<div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials">
-		
-			<div class="wrapper wrapper--no-padding-until-large">
+
+		<div class="wrapper wrapper--no-padding-until-large">
 
 			<h2 class="section-title section-title--blue "> <img src="assets/images/icons/comment.svg" class="section-title__icon"> Real <strong>Testimonials</strong></h2>
 
@@ -166,8 +166,10 @@
 		</div>
 	</div>
 
-	<footer>
-		<p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+	<footer class="site-footer">
+		<div class="wrapper">
+			<p><span class="site-footer__text"> Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
+		</div>
 	</footer>
 </body>
 
