--- a/app/index.html
+++ b/app/index.html
@@ -15,17 +15,31 @@
 
 <body>
 
-	<header>
-		<img src="assets/images/icons/clear-view-escapes.svg">
+	<header class="site-header">
+		<div class="wrapper">
+			<div class="site-header__logo">
+				<!--				<span class="site-header__logo__text-indent">Clear View Escapes</span>-->
+				<img src="assets/images/icons/clear-view-escapes.svg">
+			</div>
 
-		<a href="#" class="btn">Get in Touch</a>
-		<nav>
-			<ul>
-				<li><a href="#our-beginning">Our Beginning</a></li>
-				<li><a href="#features">Features</a></li>
-				<li><a href="#testimonials">Testimonials</a></li>
-			</ul>
-		</nav>
+			<div class="site-header__menu-icon">
+				<div class="site-header__menu-icon__middle"></div>
+			</div>
+
+
+			<div class="site-header__menu-content">
+				<div class="site-header__btn-container">
+					<a href="#" class="btn">Get in Touch</a>
+				</div>
+				<nav class="primary-nav primary-nav--pull-right">
+					<ul class="primary-nav__list">
+						<li><a href="#our-beginning">Our Beginning</a></li>
+						<li><a href="#features">Features</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</header>
 
 	<div class="large-hero">
@@ -54,7 +68,7 @@
 			<h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong> better for everyone. </strong></h3>
 
 			<div class="wrapper wrapper--medium wrapper--b-margin">
-				<img sizes="(min-width:960px) 976px, 100vw" srcset="assets/images/first-trip-low-res-i.jpg 565w, assets/images/first-trip-i.jpg 976w, assets/images/first-trip-hi-dpi-i.jpg 1952w " alt="Couple walking down a street.">
+				<img sizes="(min-width:960px) 976px, 100vw" srcset="assets/images/first-trip.jpg 565w, assets/images/first-trip-i.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w " alt="Couple walking down a street.">
 			</div>
 
 			<div class="row row--gutters">
@@ -155,13 +169,13 @@
 				<div class="row__large-4">
 					<div class="testimonial testimonial--last">
 						<div class="testimonial__photo">
-							<img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w,  assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat Micky"> </div>
+							<img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w,  assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat Micky">
+						</div>
 						<h3 class="testimonial__title">Cat McKitty</h3>
 						<h4 class="testimonial__subtitle">6 Time Escaper</h4>
 						<p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
@@ -173,4 +187,6 @@
 	</footer>
 </body>
 
+<script type="text/javascript" src="assets/styles/scripts/jquery-3.2.1.min.js"></script>
+<script src="./assets/styles/scripts/app.js"></script>
 </html>
