completed styles for sticky navigation

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 		</div>
 	</header>
 
+
 	<div class="large-hero">
 
 		<picture>
@@ -185,8 +186,10 @@
 			<p><span class="site-footer__text"> Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
 		</div>
 	</footer>
+
 </body>
 
 <script type="text/javascript" src="assets/styles/scripts/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="assets/styles/scripts/jquery.waypoints.min.js"></script>
 <script src="./assets/styles/scripts/app.js"></script>
 </html>
