loaded the picturefill.js to support older browsers as a fallback to srcset attr and picture element

--- a/app/index.html
+++ b/app/index.html
@@ -207,5 +207,6 @@
 
 <script type="text/javascript" src="assets/styles/scripts/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="assets/styles/scripts/jquery.waypoints.min.js"></script>
+<script type="text/javascript" src="assets/styles/scripts/picturefill.min.js"></script>
 <script src="./assets/styles/scripts/app.js"></script>
 </html>
